--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -1,6 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
   <head>
+      <script type="text/javascript">
+          if (!location.href.endsWith("/")) {
+              window.stop();
+              location.href = location.href + "/";
+          }
+      </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
@@ -20,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ResumeBuilder</title>
+    <title>Resume Viewer</title>
   </head>
   <body>
     <noscript>
