--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -20,7 +20,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Resume Viewer</title>
 </head>
-<body>
+<body class="LockedView">
     <noscript>
         You need to enable JavaScript to run this app.
     </noscript>
